--- a/index.html
+++ b/index.html
@@ -1,27 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-    <meta charset=" UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stopwatch</title>
-    <link rel="stylesheet" href="style.css">
+  <title>Stopwatch with Milliseconds</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-    <div class="stopwatch-container">
-        <div>
-            <h1>Stopwatch</h1>
-        </div>
-        <h1 id="time">00:00:00:00</h1>
-        <div class="control-buttons">
-            <button id="start">Start</button>
-            <button id="stop">Stop</button>
-            <button id="reset">Reset</button>
-        </div>
-    </div>
+  <h1>Stopwatch with Milliseconds</h1>
+  <div class="stopwatch">
+    <span id="hours">00</span>:
+    <span id="minutes">00</span>:
+    <span id="seconds">00</span>.
+    <span id="milliseconds">000</span>
+    <button id="start-button">Start</button>
+    <button id="stop-button" disabled>Stop</button>
+    <button id="reset-button">Reset</button>
+  </div>
 
-    <script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
-
 </html>
